[package]
name = "dragon_boot"
version = "0.1.0"
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
uefi = { version = "0.26.0", features = ["alloc"] }
uefi-services = "0.23.0"

[build-dependencies]
dragon_boot_build = { path = "build-scripts/dragon_boot_build" }

[workspace]
exclude = [ "build-scripts" ]
